Updated Logo, merged About and Why BIASafe, other 1-2 small changes

--- a/content/intro/meet-soteria.mdx
+++ b/content/intro/meet-soteria.mdx
@@ -8,7 +8,7 @@ Leveraging advanced machine learning and natural language processing to analyze 
 
 ---
 
-## ![Soteria](./BiasafeIntro.png)
+![Soteria](./BiasafeIntro.png)
 
 ## **What It Includes**
 
@@ -22,8 +22,9 @@ Soteria includes everything what an investor is looking for, with easy access to
 
 Soteria allows user to integrate their portfolios using our API integration for popular world wide services.
 
-| Sources          | What they offer                                        |
-| ---------------- | ------------------------------------------------------ |
-| **Binance**      | Cryptocurrency trading, staking, and market data       |
-| **Bybit**        | Advanced scenario generation and derivatives trading   |
-| **WealthSimple** | Automated investing, financial planning, and tax tools |
+| Sources          | What they offer                                          |
+| ---------------- | -------------------------------------------------------- |
+| **Binance**      | Cryptocurrency trading, staking, and market data         |
+| **Bybit**        | Advanced scenario generation and derivatives trading     |
+| **WealthSimple** | Automated investing, financial planning, and tax tools   |
+| **Hyperliquid**  | High-speed trading platform optimized for crypto markets |
