--- a/content/portfoliomanagement/unified-portfolio-management.mdx
+++ b/content/portfoliomanagement/unified-portfolio-management.mdx
@@ -1,11 +1,11 @@
 ---
-title: Holistic Integration
-description: BIASafe AI's end-to-end portfolio management system is built on the principle of Holistic Integration. Our platform seamlessly connects all the essential components of the investment process, from data ingestion and analysis to portfolio monitoring, reporting, and trade execution.
+title: Unified Portfolio Management
+description: BIASafe AI's end-to-end portfolio management system is built on the principle of Unified Portfolio Management. Our platform seamlessly connects all the essential components of the investment process, from data ingestion and analysis to portfolio monitoring, reporting, and trade execution.
 ---
 
 ---
 
-## **Key Advantages of Holistic Integration:**
+## **Key Advantages of Unified Portfolio Management:**
 
 - **Streamlined Workflow:** Eliminate the inefficiencies of using disparate systems. Our integrated platform provides a unified environment for all your portfolio management needs.
 - **Data Consistency:** Ensure data accuracy and consistency across all modules of the system. Real-time data flows seamlessly between tracking, reporting, and execution functionalities.
