--- a/content/soteria/apis.mdx
+++ b/content/soteria/apis.mdx
@@ -1,9 +1,7 @@
 ---
 title: API's
-description:
+description: With Soteria, you are able to import your portfolios on different services!
 ---
-
-## With Soteria, you are able to import your portfolios on different services!
 
 Using our API feature, you are able to import your Binance, Wealthsimple, and Bybit portfolios onto Soteria
 which allows you to manage and view your portfolio on our portfolio section.
@@ -16,8 +14,8 @@ To add an API, follow these simple steps
 
 1. Click your icon at the bottom left and go to "Settings"
 
-## ![Settings](./Images/Settings.png)
+![Settings](./Images/Settings.png)
 
 2. Go to the API Keys tab and add your desired API Key
 
-## ![API](./Images/API.png)
+![API](./Images/API.png)
