--- a/content/soteria/prompting/advancedAnalytics.mdx
+++ b/content/soteria/prompting/advancedAnalytics.mdx
@@ -23,7 +23,7 @@ Use these prompts to dig deeper into your data:
 - "Conduct a co-integration test between XLE and USO using 2020–2024 data. Report the test statistic, p-value, and interpret the result.”
 - “Perform PCA (Principal Component Analysis) on the returns of the Magnificent 7 and explain how many components explain 95% of the variance.”
 
-## ![StatisticalAnalysis](../Images/StatisticalAnalysis.png)
+![StatisticalAnalysis](../Images/StatisticalAnalysis.png)
 
 ---
 
@@ -35,4 +35,4 @@ Try these prompts to assess risk more effectively:
 - "Determine the max relative drawdown, as well as the VaR for TSLA using 2024 returns data."
 - “Compare the maximum drawdown and Calmar ratio of a factor-based portfolio versus a market-cap weighted portfolio from 2022–2024.”
 
-## ![RiskMeasures](../Images/RiskMeasures.png)
+![RiskMeasures](../Images/RiskMeasures.png)
